Added java.security.jgss since SQLServer JDBC driver relies on it